# crc-bot

./: .gitignore  app.py  pyproject.toml  streamlit_app.py
crc_bot/notebooks/: llama_parse_multi.ipynb  llama_parse_one.ipynb  to_vector.ipynb
