[tool.poetry]
name = "crc-bot"
version = "0.1.0"
description = ""
authors = ["Skyler Kimura <skyler8@hawaii.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
llama-parse = "^0.3.5"
llama-index = "^0.10.17"
streamlit = "^1.37.0"
nltk = "^3.8.1"
llama-index-vector-stores-milvus = "^0.1.21"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
